# osdd-api

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json
.github/workflows/: release-py.yml  release-ts.yml
clients/go/: go.mod
clients/go/osdd/: common.pb.go  content.pb.go  materialized.pb.go  parsing_test.go
clients/go/osdd/recipes/: context.pb.go  ide.pb.go  permissions.pb.go  recipe.pb.go
clients/go/osdd/testdata/: example.json
clients/python/: pyproject.toml
clients/python/src/osdd/: common_pb2.py  common_pb2.pyi  content_pb2.py  content_pb2.pyi  materialized_pb2.py  materialized_pb2.pyi
clients/python/src/osdd/recipes/: context_pb2.py  context_pb2.pyi  ide_pb2.py  ide_pb2.pyi  permissions_pb2.py  permissions_pb2.pyi  recipe_pb2.py  recipe_pb2.pyi
clients/ts/: jest.config.js  package-lock.json  package.json  rollup.config.dts.js  rollup.config.js  tsconfig.build.json  tsconfig.dts.json  tsconfig.json
clients/ts/src/: index.ts
clients/ts/src/osdd/: common.ts  content.ts  materialized.ts
clients/ts/src/osdd/recipes/: context.ts  ide.ts  permissions.ts  recipe.ts
protos/osdd/: common.proto  content.proto  materialized.proto
protos/osdd/recipes/: context.proto  ide.proto  permissions.proto  recipe.proto
scripts/: generate-go.sh  generate-py.sh  generate-ts.sh
