[project]
name = "osdd"
version = "0.1.0"
description = "OpenSDD API - Python bindings"
authors = [
    {name = "Devplan", email = "info@devplan.com"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "protobuf>=5.29.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osdd"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
